# Projects

./: .gitignore
Numbers/: a.out
c++/Numbers/: fibonacci_sequence.cpp  find_e.cpp  find_pi.cpp  task_10.cpp  task_6.cpp  task_7.cpp  task_9.cpp
c++/cyber_security/: CMakeLists.txt
c++/cyber_security/cryptopals/33.Diffie-Hellman/: CMakeLists.txt
c++/cyber_security/cryptopals/33.Diffie-Hellman/src/: main.cc
c++/cyber_security/cryptopals/Set-5/: CMakeLists.txt
c++/cyber_security/cryptopals/Set-5/c++/include/: diffie-hellman.h
c++/cyber_security/cryptopals/Set-5/c++/src/: diffie-hellman.cc  main.cc
c++/cyber_security/cryptopals/Set-5/include/: diffie-hellman.h
c++/cyber_security/cryptopals/Set-5/python/: ch33.py  ch34.py  ch39.py  ch40.py  ch41.py  ch42.py  ch46.py  requierements.txt
c++/cyber_security/cryptopals/Set-5/src/: diffie-hellman.cc  main.cc
c++/cyber_security/data/: 9.2.7.DES.vectors.txt
c++/cyber_security/des/: CMakeLists.txt  README.md
c++/cyber_security/include/: des.h
c++/cyber_security/src/: des.cc  test_des.cc
c++/cyber_security/test/: test_des.cc
c++/expirements/: firstref.cpp  floatnum.cpp  funtemp.cpp  hexoct.cpp  limits.cpp  strc_ref.cpp  swaps.cpp  twoswap.cpp
c++/functions/: ch_r_task_3.cpp  ch_r_task_4.cpp  ch_r_task_7.cpp  pr_ex2.cpp  pr_ex3.cpp
c++/multithreading/: data_race.cc  dead_lock.cpp  ping_pong.cpp  producer_consumer.cc
c++/primer_plus_s_pratt/ch_10/pr_ex1/: app.cpp  bank_a.h
c++/primer_plus_s_pratt/ch_10/pr_ex2/: person.cpp
c++/primer_plus_s_pratt/ch_10/pr_ex4/: app.cpp  sales.cpp  sales.h
c++/primer_plus_s_pratt/ch_10/pr_ex6/: move.cpp
c++/primer_plus_s_pratt/ch_10/pr_ex7/: plorg.h
c++/primer_plus_s_pratt/ch_11/cr_1/: app.cpp  stonewt.cpp  stonewt.h
c++/primer_plus_s_pratt/ch_11/cr_4/: app.cpp  stonewt.cpp  stonewt.h
c++/primer_plus_s_pratt/ch_11/cr_7/: app.cpp  vector.cpp  vector.h
c++/primer_plus_s_pratt/ch_11/pe_1/: out.txt  randwalk.cpp  vector.cpp
c++/primer_plus_s_pratt/ch_11/pe_2/: test.cpp  vect.cpp  vect.h
c++/primer_plus_s_pratt/ch_11/pe_3/: app.cpp
c++/primer_plus_s_pratt/ch_11/pe_5/: stonewt.cpp  stonewt.h  test.cpp
c++/primer_plus_s_pratt/ch_11/pe_6/: stonewt.cpp  stonewt.h  test.cpp
c++/primer_plus_s_pratt/ch_11/pe_7/: complex0.cpp  complex0.h  demo.cpp
c++/primer_plus_s_pratt/ch_12/pe_1/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/pe_2/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/pe_3/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/pe_4/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/pe_5/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/pe_5/include/: customer.h  mq_simulation.h  node.h  queue.h  simulation.h
c++/primer_plus_s_pratt/ch_12/pe_5/src/: customer.cc  mq_simulation.cc  simulation.cc  test.cc
c++/primer_plus_s_pratt/ch_12/queue/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/queue/src/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/queue/test/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_12/queue/test/src/: test_queue.cpp
c++/primer_plus_s_pratt/ch_12/queue/test/src/queue/: Queue.cpp  Queue.h
c++/primer_plus_s_pratt/ch_13/: base.h  derived.h  question_6.cc  review.md  test.cc
c++/primer_plus_s_pratt/ch_13/pe_1/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_13/pe_3/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_13/pe_4/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_14/: review.md
c++/primer_plus_s_pratt/ch_14/pe_1/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_14/pe_2/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_14/pe_3/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_14/pe_4/: CMakeLists.txt
c++/primer_plus_s_pratt/ch_15/: review.md
c++/primer_plus_s_pratt/ch_7/: pr_ex7.cpp
c++/primer_plus_s_pratt/ch_8/: ch_r_task_4.cpp  pr_ex1.cpp  pr_ex4.cpp  pr_ex5.cpp  pr_ex6.cpp
python/graber/: .gitignore  bolt_script.py  categories.py  config.ini.dist  dict_helper.py  fixer.py  img_dict.txt  main.py  requirements.txt
python/graber/utils/: converter.py  db_helper.py  graber.py  parser.py
(+74 files in other folders)
